Working stencils, not working mouse